# powertune

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FUTURE_SCOPE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  battery_report.html  build.ps1  install.ps1  powertune.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
analyzers/: anomaly.py  battery.py  browser_intel.py  cpu.py  dependencies.py  gpu.py  gpu_residency.py  kernel_etw.py  power_attribution.py  privacy.py  services.py  sleep_states.py  thermal.py  timers.py
cli/: launcher.bat  powertune.ps1  powertune_bundle.py
core/: benchmark.py  dashboard.py  dashboard_elite.py  database.py  engine.py  fleet.py  intelligence.py  plugins.py  power_model.py  predictions.py  telemetry.py  ui.py
docs/: ENGINEERING_MANIFESTO.md  SAFETY_POLICY.md  architecture.md  gallery.md  linux_port_architecture.md  philosophy.md  power_optimization_theory.md  testing_guide.md  troubleshooting.md
docs/benchmarks/: chrome_timer_resolution_study.md
docs/whitepaper/: evidence_driven_optimization.md
docs/wiki/: aspm_deep_dive.md  (+2 more)
examples/: asus_rog_report.md  ultrabook_efficiency_study.md
plugins/: vendor_asus.py
profiles/: battery.ps1  battery.yaml  developer.ps1  developer.yaml  gaming.ps1  gaming.yaml  silent.ps1  silent.yaml
reports/: battery_report.html  dashboard_elite.html
rollback/: restore.ps1  snapshot.ps1
tests/: test_engine.py  test_parsers.py  test_safety.py  test_security.py
(+1 files in other folders)
